--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -66,22 +66,25 @@
       <p class="f2-ns f3 mw6 center tc mt5-ns mt4 lh-copy mb3">Recent work:</p>
       <div class="w-100 dt-ns">
         <div class="w-third-ns pa3-l pa2 dtc-ns">
-          <div class="pa1 pb0 bg-white shadow-3">
+          <div class="pa1 pb0 bg-white shadow-3 relative">
             <img src="images/illustration/cover.jpg">
+            <a href="http://inform.studio/images/illustration/cover.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
           </div>
           <p class="f6 tc b mb1">Quantum phase switch</p>
           <p class="f7 tc mt0">Client: University of Maryland</p>
         </div>
         <div class="w-third-ns pa3-l pa2 dtc-ns">
-          <div class="pa1 pb0 bg-white shadow-3">
+          <div class="pa1 pb0 bg-white shadow-3 relative">
             <img src="images/illustration/nanowire.jpg">
+            <a href="http://inform.studio/images/illustration/nanowire.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
           </div>
           <p class="f6 tc b mb1">Gallium-nitride nanowire LED</p>
           <p class="f7 tc mt0">Client: National Institute of Standards and Technology</p>
         </div>
         <div class="w-third-ns pa3-l pa2 dtc-ns">
-          <div class="pa1 pb0 bg-white shadow-3">
+          <div class="pa1 pb0 bg-white shadow-3 relative">
             <img src="images/illustration/cover2.jpg">
+            <a href="http://inform.studio/images/illustration/cover2.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
           </div>
           <p class="f6 tc b mb1">Optics for single-atom imaging</p>
           <p class="f7 tc mt0">Client: Joint Quantum Institute</p>
