--- a/technical-graphics.html
+++ b/technical-graphics.html
@@ -6,23 +6,123 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.css">
+  <style>
+  @media screen and (min-width: 30em) {
+    .bg-lightest-gray {
+      background-color: #fafafa;
+    }
+    .bg-lighter-gray {
+      background-color: #fcfcfc;
+    }
+    .b--lighter-gray {
+      border-color: #fcfcfc !important;
+    }
+  }
+  </style>
 </head>
-<body class="sans-serif w-100 center black-70 f6 bg-white pt2 pb2">
+<body class="sans-serif w-100 center black-70 f6 bg-white">
   <header class="w-100">
-    <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
+    <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb0 mw8 center pa2"><b class="fw8">inform</b>studio</p></a>
   </header>
   <section class="bt b--moon-gray w-100 mt0 pb5">
     <div class="mw8 w-100 center pl2 pr2">
-      <!-- <p class="tc f1-ns f2 pt4 mb3 dark-gray">Navigational aids for a complex world.</p> -->
-      <p class="tc f1-ns f2 pt4 mb3 dark-gray">Technical Graphics</p>
+      <p class="tc f1-ns f2 pt4 mb3 dark-gray">Navigation aids for a complex world.</p>
+      <!-- <p class="tc f1-ns f2 pt4 mb3 dark-gray">Technical Graphics</p> -->
       <h1 class="tc f3-ns f4">Graphs, charts, diagrams, and more.</h1>
-      <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
-      <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
+      <p class="f4-ns f5 mw6 center mt5 lh-copy">Whether describing how a device works or explaining a complex process, a good drawing goes a long way towards successfully getting your point across.</p>
+      <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div> -->
+    </div>
+  </section>
+  <section class="w-100 pl2 pr2 bt b--moon-gray bg-lightest-gray">
+    <div class="mw8 w-100 center">
+      <div class="dt-ns w-100">
+        <div class="w-100-ns w-100 dtc-ns v-mid"><img src="images/circlediagram.png"></div>
+      </div>
+    </div>
+  </section>
+  <section class="bg-white bt b--moon-gray w-100 mt0 pb5-ns pb4">
+    <div class="mw8 w-100 center pl2 pr2">
+      <p class="f4-ns f5 mw6 center mt5-ns mt4 lh-copy">We'll work with you translate your message into visual form, creating a clear, understandable picture for your audience.</p>
+    </div>
+  </section>
+  <section class="w-100 pl2 pr2 bt b--moon-gray bg-lightest-gray">
+    <div class="mw8 w-100 center">
+      <div class="dt-ns w-100">
+        <div class="w-100-ns w-100 dtc-ns v-mid"><img src="images/triple-point-banner.png"></div>
+      </div>
+    </div>
+  </section>
+  <section class="bg-white bt b--moon-gray w-100 mt0 pb5-ns pb4 relative">
+    <div class="mw8 w-100 center pr4-l pl4-l pa2">
+    <p class="f2-ns f3 mw7 center tc-ns mt5-ns mt4 lh-copy mb3">An illustration for every situation.</p>
+    <p class="f4-ns f5 mw6 center mt4 lh-copy">From simple cartoons to detailed diagrams, we'll adjust the style and complexity of a graphic to meet your needs.</p>
+    <p class="f3-ns f4 mw6 center mt4 lh-copy center tc mt5">We specialize in:</p>
+    <div class="w-100 cf mt4">
+    <div class="w-50-ns w-100 fl-ns pa3">
+      <div class="w-100 pa1 pb0 ba b--moon-gray shadow-3 mw6 center relative">
+        <img src="images/polyethylene.png" class="center">
+        <!-- <a href="http://inform.studio/images/polyethylene.png" target="_blank"><div class="bg-white absolute w2 bottom-0 br3 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a> -->
+      </div>
+      <div class="w-100 lh-copy pr4-l pl4-l">
+        <p class="f4-ns f5 tc center lh-copy mb3 tr">Basic cartoons.</p>
+      </div>
+    </div>
+    <div class="w-50-ns w-100 fl-ns pa3">
+      <div class="w-100 pa1 pb0 ba b--moon-gray shadow-3 mw6 center relative">
+        <img src="images/microscope-crop.jpg" class="center">
+        <!-- <a href="http://inform.studio/images/microscope-crop.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br3 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a> -->
+      </div>
+      <div class="w-100 v-mid lh-copy pr4-l pl4-l">
+        <p class="f4-ns f5 tc center lh-copy mb3 tr">Line art.</p>
+      </div>
+    </div>
+    <div class="w-50-ns w-100 fl-ns pa3">
+      <div class="w-100 pa1 pb0 ba b--moon-gray shadow-3 mw6 center relative">
+        <img src="images/vapor-cell-cropped.jpg" class="center">
+        <!-- <a href="http://inform.studio/images/vapor-cell-cropped.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br3 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a> -->
+      </div>
+      <div class="w-100 v-mid lh-copy pr4-l pl4-l">
+        <p class="f4-ns f5 tc center lh-copy mb3 tr">Device diagrams.</p>
+      </div>
+    </div>
+    <div class="w-50-ns w-100 fl-ns pa3">
+      <div class="w-100 pa1 pb0 ba b--moon-gray shadow-3 mw6 center relative">
+        <img src="images/solarspectra-color.png" class="center">
+        <!-- <a href="http://inform.studio/images/solarspectra-color.png" target="_blank"><div class="bg-white absolute w2 bottom-0 br3 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a> -->
+      </div>
+      <div class="w-100 v-mid lh-copy pr4-l pl4-l">
+        <p class="f4-ns f5 tc center lh-copy mb3 tr">Detailed illustrations.</p>
+      </div>
+    </div>
+  </div>
+    <!-- <div class="w-100 dt-l mt5">
+      <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
+        <p class="f4-ns f5 tc center lh-copy mb3 tr">From short cartoons, for an article or presentation<span class="f6">...</span></p>
+      </div>
+      <div class="w-50-l w-100 dtc-l pa2 pb1 ba b--moon-gray shadow-3 mw6 center mr4-l"><img src="images/prospect-diagram-large.jpg" class="center"></div>
+    </div> -->
+  </section>
+  <section class="bg-white bt b--white w-100 mt0 pb5-ns pb4 relative">
+    <div class="mw9 w-100 center pl5-l pr5-l pl2 pr2 relative z-1">
+      <p class="f2-ns f3 mw6 center tc mt0 lh-copy mt4">Recent work:</p>
+      <div class="w-100 mw7 center tc ba b--moon-gray shadow-3 pa2 bg-white relative">
+        <img src="images/neutron-detector.jpg" class="w-100">
+        <a href="http://inform.studio/images/neutron-detector.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br3 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
+      </div>
+      <p class="f6 tc b mb1">Calibration stages for portable neutron flux monitor</p>
+      <p class="f7 tc mt0">Client: National Institute of Standards and Technology</p>
+    </div>
+    <div class="absolute h-50 bg-lighter-gray w-100 center bottom-0 bt b--moon-gray"></div>
+  </section>
+  <section class="w-100 bg-lighter-gray bt b--lighter-gray pb6-ns pb5 b--white">
+    <div class="mw8 w-100 center">
+      <p class="tc mb0 f2-ns f3 dark-gray mt4">Want something illustrated?</p>
+      <p class="f5-ns f6 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/mail.svg" class="w2 ml1"></span></a> and let's discuss.</p>
     </div>
   </section>
   <footer>
     <div class="bt b--moon-gray center">
-      <p class="tc f7 gray mt2 mb1">© 2018 Inform Studio</p>
+      <p class="tc f7 gray mt2 mb2">© 2018 Inform Studio</p>
     </div>
   </footer>
 </body>
