--- a/technical-graphics.html
+++ b/technical-graphics.html
@@ -24,12 +24,12 @@
   <header class="w-100">
     <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb0 mw8 center pa2"><b class="fw8">inform</b>studio</p></a>
   </header>
-  <section class="bt b--moon-gray w-100 mt0 pb5">
+  <section class="bt b--moon-gray w-100 mt0 pb5-ns pb4">
     <div class="mw8 w-100 center pl2 pr2">
-      <p class="tc f1-ns f2 pt4 mb3 dark-gray">Navigation aids for a complex world.</p>
+        <p class="tc-ns f1-ns f2 pt4-ns pt2 mb3 dark-gray">Navigation aids for a complex world.</p>
       <!-- <p class="tc f1-ns f2 pt4 mb3 dark-gray">Technical Graphics</p> -->
-      <h1 class="tc f3-ns f4">Graphs, charts, diagrams, and more.</h1>
-      <p class="f4-ns f5 mw6 center mt5 lh-copy">Whether describing how a device works or explaining a complex process, a good drawing goes a long way towards successfully getting your point across.</p>
+      <h1 class="tc-ns f3-ns f4">Graphs, charts, diagrams, and more.</h1>
+      <p class="f4-ns f5 mw6 center mt5-ns mt4 lh-copy">Whether describing how a device works or explaining a complex process, a good drawing goes a long way towards successfully getting your point across.</p>
       <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div> -->
     </div>
   </section>
